--- a/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-proforma-invoiceBody.vm
+++ b/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-proforma-invoiceBody.vm
@@ -38,7 +38,7 @@
   <br /> 
   <hr width="998" style="content:open-quote" /> 
 	<p align="center" style="text-indent: 6.01in"><a name="_GoBack"></a><font size="6" face="Calibri, serif" style="font-size: 22pt">
-	<strong>INVOICE</strong></font></p> 
+	<strong>PROFORM INVOICE</strong></font></p> 
 	<p align="center"> </p> 
 	<p align="justify" style="text-indent: 2.01in"><font size="6" face="Calibri, serif" style="font-size: 22pt">
 		<b>
