--- a/acerchem/acerchemstorefront/web/webroot/_ui/responsive/theme-alpha/css/general.css
+++ b/acerchem/acerchemstorefront/web/webroot/_ui/responsive/theme-alpha/css/general.css
@@ -1437,11 +1437,11 @@ textarea{
 	margin-top: 0;
 }
 
+
+
 .g-cartable .g-table .text{
 	width: 100%;
 }
-
-
 
 /*checkout*/
 .gen-content .maxon_salesul{
@@ -1822,7 +1822,8 @@ textarea{
 /*gallery*/
 .gal-centent{
 	position: relative;
-	border-top:4px solid #f3f3f3;
+	/*shaun  */
+	/* border-top:4px solid #f3f3f3; */
 }
 .gal-centent .g-cont,.gal-centent .g-cartable{
 	padding-top: 0;
@@ -1831,17 +1832,18 @@ textarea{
 	font-weight:500;
 }
 .gal-centent .gall-left{
-	position: absolute;
+	/* position: absolute; */
 	top:0;
 	left: 0;
 	padding-left: 5%;
 	width:20%;
-	padding-bottom: 40px;
+	/* padding-bottom: 40px; */
 	background-color: #fff;
 }
 .gal-centent .gall-right{
 	display: block;
-	margin-left: 20%;
+	/* shaun:左边距设为0 */
+	margin-left: 0%;
 	margin-right: 5%;
 	border-left: 4px solid #f3f3f3;
 
@@ -1849,7 +1851,8 @@ textarea{
 .gal-centent .gall-left h4{
 	font-size:24px;
 	line-height: 28px;
-	padding: 36px 0 4px 0;
+	/* shaun */
+	/* padding: 36px 0 4px 0; */
 }
 .gal-centent .gall-left h5{
 	font-size:18px;
@@ -1881,7 +1884,8 @@ textarea{
 	position: relative;
 	min-height: 50px;
 	width: 75%;
-	margin:0 5% 0 20%;
+	/* shaun*/
+	margin:0 5% 0 5%;
 }
 .gal-centent .g-cont{
 	padding-bottom: 0;
@@ -1890,11 +1894,14 @@ textarea{
 .m-term-ri{
 	float:left;
 }
+
+/* shaun:sort by 下拉框 */
 .m-term-ri{
+	height:49px;
 	position: absolute;
 	right: 0;
 	top:0;
-	padding-left: 90px;
+	padding-left: 105px;
 	background-color: #096735;
 }
 .m-term-ri .right{
@@ -2143,6 +2150,7 @@ display: inline-table;
 .maxfixed .maxtext{
 	width:100%;
 	padding: 0;
+	padding-right: 12%;
 	padding-left: 12px;
 	position: relative;
 }
@@ -2165,6 +2173,7 @@ display: inline-table;
 }
 .maxfixed .old-price{
 	color: #999;
+	display: none;
 	float: left;
 	line-height: 30px;
 	position: relative;
