修复税检查和checkout的css文件问题

--- a/acerchem/acerchemstorefront/web/webroot/_ui/responsive/theme-alpha/css/general.css
+++ b/acerchem/acerchemstorefront/web/webroot/_ui/responsive/theme-alpha/css/general.css
@@ -80,7 +80,7 @@ textarea{
 	z-index: 99;
 }
 
-.checkbox{
+/* .checkbox{
 	position: relative;
 	display: block;
 	padding-left: 30px;
@@ -114,7 +114,7 @@ textarea{
 	border-top:none;
 	border-left:none;
 	transform:rotate(45deg);
-}
+} */
 
 .submit{
 	width: 250px;
