--- a/acerchem/acerchemstorefront/web/webroot/_ui/responsive/theme-alpha/css/style.css
+++ b/acerchem/acerchemstorefront/web/webroot/_ui/responsive/theme-alpha/css/style.css
@@ -1636,8 +1636,7 @@ pre code {
   width: 33.33333333%;
 }
 .col-xs-3 {
-	/* shaun */
-  width: 20%;
+  width: 22%;
 }
 .col-xs-2 {
   width: 16.66666667%;
@@ -1766,9 +1765,9 @@ pre code {
   .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
     float: left;
   }
-  .col-sm-12 {
+ /* .col-sm-12 {
     width: 100%;
-  }
+  }*/
   .col-sm-11 {
     width: 91.66666667%;
   }
@@ -4753,10 +4752,11 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pagination > .active > a:focus,
 .pagination > .active > span:focus {
   z-index: 3;
-  color: #153a59;
+  color: #333;
   background-color: #47b6b1;
   border-color: #47b6b1;
   cursor: default;
+
 }
 .pagination > .disabled > span,
 .pagination > .disabled > span:hover,
@@ -7782,7 +7782,7 @@ General
 *****************************************************************/
 a,
 button {
-  color: #ec7205;
+  color: #333;
   text-decoration: none;
 }
 a:hover {
@@ -9636,17 +9636,17 @@ fieldset[disabled] .btn-default.active {
 .btn-primary {
   border: 3px solid;
   color: #ffffff;
-  background-color: #47b6b1;
-  border-color: #47b6b1;
+  background-color: #096735;
+  border-color: transparent;
 }
 .btn-primary:hover,
 .btn-primary:focus,
 .btn-primary:active,
 .btn-primary.active,
 .open .dropdown-toggle.btn-primary {
-  color: #ffffff;
-  background-color: #5adfd9;
-  border-color: #5adfd9;
+  color: #fff;
+  background-color: #0c7f44;
+  border-color: transparent;
   -webkit-box-shadow: none;
   box-shadow: none;
 }
@@ -9703,12 +9703,7 @@ fieldset[disabled] .btn-primary.active {
 .pagination > li.pagination-next > a,
 .pagination > li.pagination-prev > span,
 .pagination > li.pagination-next > span {
-   font-size: 20px;
-  background-color: transparent;
-  color: #c0c0c0;
-  font-weight: 500;
-  /* shaun */
-
+  font-size: 11px;
 }
 .pagination > li.pagination-prev > a:hover,
 .pagination > li.pagination-next > a:hover,
@@ -9762,7 +9757,7 @@ fieldset[disabled] .btn-primary.active {
   line-height: 30px;
   width: 30px;
   padding: 0;
-  font-size: 24px;
+  font-size: 16px;
   text-align: center;
 }
 .pagination > li.pagination-prev > a,
@@ -10617,7 +10612,7 @@ fieldset[disabled] .btn-primary.active {
   bottom: 0;
   position: absolute;
   right: 0;
-  content: "ï¿½?";
+  content: "â€?";
 }
 .carousel .item .item__name:after,
 .carousel__component--carousel .item .item__name:after,
@@ -10806,8 +10801,7 @@ fieldset[disabled] .btn-primary.active {
 .banner__component a {
   display: block;
 }
-.simple-banner-component img,
-.banner__component img {
+.simple-banner-component img{
   width: 100%;
   height: auto;
 }
@@ -11708,7 +11702,6 @@ a.product__listing .product__listing--promo:focus {
   }
   .product-list-right-component {
     margin-left: 0;
-    padding-top: 20px;
   }
   .product-list-right-component .pagination-bar {
     margin-top: 0;
@@ -15264,14 +15257,16 @@ fieldset#startDate .form-group .control-label {
 }
 #cboxClose {
   position: absolute;
-  right: 13px;
-  top: 10px;
+  right: 0;
+  top: 0;
   background: transparent;
   border: 0 none;
   color: #797979;
   padding: 5px;
   font-size: 25px;
+  text-align: right;
 }
+
 #cboxLoadedContent {
   margin-top: 88px;
   padding: 15px 40px 30px 40px;
@@ -16455,7 +16450,6 @@ table div.left-align {
 }
 table td {
   padding: 20px 10px;
-  vertical-align: top;
 }
 .responsive-table th:first-child {
   padding-left: 30px;
@@ -16542,7 +16536,7 @@ input[type="checkbox"] {
   margin-bottom: 20px;
 }
 label {
-  color: #153a59;
+  color: #333;
   font-weight: 600;
   text-transform: uppercase;
   font-size: 13px;
