--- a/acerchem/acerchemstorefront/web/webroot/_ui/responsive/theme-alpha/css/max.css
+++ b/acerchem/acerchemstorefront/web/webroot/_ui/responsive/theme-alpha/css/max.css
@@ -179,7 +179,6 @@ background:-webkit-linear-gradient(top,rgba(0,0,0,0) 20%,rgba(0,0,0,.9) 100%);}
     .sign-content label, .gen-content .g-cartable .solid-form label , .maxlatest .sign-content .text-section{
         margin-bottom: 10px;
     }
-    
 }
 
 @media screen and (max-width: 1580px) {
@@ -192,7 +191,10 @@ background:-webkit-linear-gradient(top,rgba(0,0,0,0) 20%,rgba(0,0,0,.9) 100%);}
    .sign-content .label-title{
     margin-bottom: 6px;
    }
-    
+   .footer .maxfootnav{
+        padding-left: 13%;
+   }
+
 }
 
 
@@ -226,6 +228,7 @@ background:-webkit-linear-gradient(top,rgba(0,0,0,0) 20%,rgba(0,0,0,.9) 100%);}
     .maxlatest .sign-content{
         right: 5%
     }
+    
 
     
 }
@@ -261,6 +264,10 @@ background:-webkit-linear-gradient(top,rgba(0,0,0,0) 20%,rgba(0,0,0,.9) 100%);}
   .maxmean .meansale p, .maxmean p, .maxmean .textmessge p{
     font-size: 16px;
   }
+  .footer .maxfootnav{
+        padding-left: 12%;
+   }
+  
 }
 
 @media screen and (max-width: 1200px) {
@@ -331,6 +338,10 @@ background:-webkit-linear-gradient(top,rgba(0,0,0,0) 20%,rgba(0,0,0,.9) 100%);}
         height: 30px; 
         line-height: 30px;
     }
+    .footer .maxfootnav{
+        padding-left: 10%;
+   }
+
 }
 
 
