--- a/acerchem/acerchemstorefront/web/webroot/_ui/responsive/theme-alpha/css/min.css
+++ b/acerchem/acerchemstorefront/web/webroot/_ui/responsive/theme-alpha/css/min.css
@@ -190,9 +190,9 @@ button{
 .maxtop_rig a.maxicon-search , .searchlist .btn-submit{background-position: -10px -227px;}
 .maxtop_rig a.maxicon-cart{background-position: -10px -283px;position: relative;}
 .maxtop_rig a.maxicon-cart em{position: absolute;font-size: 12px;width: 18px;height: 18px;line-height: 18px;text-align: center;border-radius: 50%;right: -5px;background: #096735;color: #fff;}
-.maxtop_rig .userintro{position: absolute; left: -70px; color: #999; font-size: 14px; }
-.maxtop_rig .userintro button{color: #096735; display: inline; border:none; background: transparent; text-align: right; font-size: 14px; }
-.maxtop_rig .userintro button:after{content:''; display: block; position: absolute; bottom:-2px; right: 0; width: 20px; border-top:1px solid #096735; }
+.maxtop_rig .userintro{position: absolute; left:0; top:5px; color: #999; font-size: 14px; width: 140%; font-size: 0; }
+.maxtop_rig .userintro button{color: #096735; display: inline; border:none; background: transparent;  font-size: 12px; }
+.maxtop_rig .userintro button:after{content:''; display: none; position: absolute; bottom:-2px; right: 0; width: 20px; border-top:1px solid #096735; }
 .maxtop_rig .bansearch{position: absolute; top:0; right: 0; background:#eee; width: 200px; }
 .maxtop_rig .bansearch .form-control{height: 30px; line-height: 30px; background: transparent; border:none; box-shadow: none; font-size: 12px; }
 .maxtop_rig .bansearch .input-group-btn .btn{padding:0; width: 40px; height: 30px; color: #999}
